<resources>
    <string name="app_name">Overrun</string>
    <string name="start_description">Start Game</string>
    <string name="options_description">Settings</string>
    <string name="login_description">Sign in</string>

    <string name="sign_in_or_reg">Don\'t have an account?\n Register or sign in with your Google account below.</string>

    <string name="shared_prefs">group7.tcss450.tacoma.uw.edu.overrun.SHARED_PREFS</string>
    <string name="server_client_id">711195024447-fthg4h2qidakukdus8fscsb8868ld3ph.apps.googleusercontent.com</string>
    <string name="logged_in">LOGGED_IN</string>
    <string name="user_name">USER_NAME</string>
    <string name="user_email">USER_EMAIL</string>
    <string name="user_id">USER_ID</string>
    <string name="loading">Loading…</string>

    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="registration_alt_text">Or you can create an account here:</string>
    <string name="PROD_API_URL">http://cssgate.insttech.washington.edu:8081/</string>
    <string name="DEV_API_URL">http://10.0.2.2:8081/</string>
    <string name="invalid_reg_form">Registration form is not valid.</string>
    <string name="need_network_register">A network connection is required to register.</string>
    <string name="our_server_messed_up">Sorry, our server messed up.</string>
    <string name="signing_in">Signing in...</string>
    <string name="need_network_login">A network connection is required to login.</string>
    <string name="failed_signin">Failed to sign in.</string>
    <string name="no_netowrk_upload_later">No network detected. Stats will be saved and uploaded later.</string>
    <string name="has_internet">hasInternet</string>



    <string name="diff_text">Difficulty</string>
    <string name="controls_text">Controls</string>
    <string name="title_activity_options">OptionsActivity</string>


    <string name="saved_difficulty_setting">saved_difficulty</string>
    <string name="saved_controls_setting">saved_controls</string>
    <string name="saved_volume_setting">saved_volume</string>


    <string name="diff_one">Slow and Steady</string>
    <string name="diff_two">Food for Thought</string>
    <string name="diff_three">Brain Dead</string>

    <string-array name="difficulty_array">
        <item>Slow and Steady</item>
        <item>Food for Thought</item>
        <item>Brain Dead</item>
    </string-array>

    <string-array name="controls_array">
        <item>Control Layout One</item>
        <item>Control Layout Two</item>
        <item>Control Layout Three</item>
    </string-array>

    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register">Register</string>
    <string name="email_hint">Email</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or_text">OR</string>


    <string name="left_button_txt">LEFT</string>
    <string name="right_button_txt">RIGHT</string>
    <string name="fire_button_txt">FIRE!</string>
    <string name="pause_button_txt">| |</string>

    <string name="pause_dialog">GAME PAUSED</string>
    <string name="resume_button">Resume</string>
    <string name="game_over_text">GAME OVER!</string>
    <string name="exit_button">Exit to Main Menu</string>
    <string name="play_again_text">Play Again</string>
    <string name="recient_high_score">high_score</string>

    <!--Facebook Strings-->

    <string name="facebook_app_id">1325773164160592</string>



    <!--MediaPlayer Strings-->
    <string name="music_position">position_music</string>
    <string name="music_volume">volume_music</string>



    <!--SQL STRINGS-->
    <string name="CREATE_PLAYER_SQL">
    CREATE TABLE IF NOT EXISTS Player
    (id TEXT PRIMARY KEY, score TEXT)
    </string>

    <string name="DROP_PLAYER_SQL">
    DROP TABLE IF EXISTS Player
    </string>

</resources>
