<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group7.tcss450.tacoma.uw.edu.overrun.SignIn.LoginFragment">


    <EditText
        android:id="@+id/email_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext|flagNoExtractUi"/>

    <EditText
        android:id="@+id/password_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_login"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:imeOptions="actionDone|flagNoExtractUi"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_login"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/login_text" />

    <TextView
        android:id="@+id/sign_in_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:text="@string/sign_in_or_reg"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_textview"
        android:layout_centerHorizontal="true"
        android:text="@string/register_text" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_button"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
