<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/z_background"
    tools:context="group7.tcss450.tacoma.uw.edu.overrun.StartMenuActivity">


    <Button
        android:text="@string/start_description"
        android:textSize="42sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_button"
        android:background="@android:color/transparent"
        android:textColor="@android:color/holo_green_dark"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button

        android:textSize="42sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:background="@android:color/transparent"
        android:textColor="@android:color/holo_green_dark"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="9dp" />

    <TextView
        android:text="@string/app_name"
        android:textSize="122sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:alpha="100.0"
        android:textColor="@android:color/holo_green_dark"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/options_description"
        android:textSize="42sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/options_button"
        android:background="@android:color/transparent"
        android:textColor="@android:color/holo_green_dark"
        android:layout_below="@+id/start_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Leaderboard"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/leaderboard_button"
        android:background="@android:color/transparent"
        android:textColor="@android:color/holo_green_dark"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/share_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Facebook Share"

        android:textColor="@color/com_facebook_blue"
        android:background="@color/transparent"
        android:drawableLeft="@drawable/com_facebook_button_icon"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/start_button"
        android:layout_toEndOf="@+id/start_button" />


</RelativeLayout>
